bower config for assets

--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,6 @@
         "vtk13/mvc": "0.2.*",
         "php-di/php-di": "5.*",
         "robmorgan/phinx": "*",
-        "components/jquery": "2.0.*",
-        "guzzlehttp/guzzle": "6.*",
-        "components/bootstrap": "3.*"
-    },
-    "config": {
-        "component-baseurl": "/assets",
-        "component-dir": "public/assets"
+        "guzzlehttp/guzzle": "6.*"
     }
 }
